More than one Render Window instances will be created after hitting F12 multiple times #88909

Closed
opened 2021-06-07 07:24:34 +02:00 by koalaok · 24 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: 2.92.0

Short description of error
Number of Render window instances will be created after hitting F12 multiple times (only after changing the language)

Exact steps for others to reproduce the error
Multi Render Windows Bug.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: 2.92.0 **Short description of error** Number of Render window instances will be created after hitting F12 multiple times (only after changing the language) **Exact steps for others to reproduce the error** [Multi Render Windows Bug.mp4](https://archive.blender.org/developer/F10161237/Multi_Render_Windows_Bug.mp4)
Author

Added subscriber: @KoalaOK

Added subscriber: @KoalaOK

#90937 was marked as duplicate of this issue

#90937 was marked as duplicate of this issue
Author

QQ截图20210607132850.jpg

![QQ截图20210607132850.jpg](https://archive.blender.org/developer/F10160558/QQ截图20210607132850.jpg)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Can not reproduce on 2.93.0 LTS. I would suggest to try with factory default settings (File -> Defaults -> Load Factory Settings)

Can not reproduce on 2.93.0 LTS. I would suggest to try with factory default settings (`File -> Defaults -> Load Factory Settings`)
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Contributor

I can reproduce in 2.93, make sure to have the translation setting set to simplified Chinese, and make sure to check the interface check box, before pressing f12 three or four time, and there goes three or four new render windows. Again, this only happens when you turn blender into Chinese interface @PratikPB2123

I can reproduce in 2.93, make sure to have the translation setting set to simplified Chinese, and make sure to check the interface check box, before pressing f12 three or four time, and there goes three or four new render windows. Again, this only happens when you turn blender into Chinese interface @PratikPB2123
Contributor
[Multi Render Windows Bug.mp4](https://archive.blender.org/developer/F10161237/Multi_Render_Windows_Bug.mp4)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

@Eary , Thanks. Can confirm now for 2.93.0 LTS. I guess problem is somewhat similar to #88755 (Blender opens a new render window even when one is open already.) and #88924 (Blender crashed while importing the file) (In both reports new instance of window created which was not reproducible in 2.92.0.

With fix for any of the task will probably fix the all the reports (Not sure though).

@Eary , Thanks. Can confirm now for 2.93.0 LTS. I guess problem is somewhat similar to #88755 (Blender opens a new render window even when one is open already.) and #88924 (Blender crashed while importing the file) (In both reports new instance of window created which was not reproducible in 2.92.0. With fix for any of the task will probably fix the all the reports (Not sure though).
Pratik Borhade changed title from The image editor will open unlimitedly in Simplified Chinese and some languages,When press F12 to render. to More than one Render Window instances will be created after hitting F12 multiple times 2021-06-07 21:02:13 +02:00
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Does this continue to happen if you change to Chinese and leave it that way? As in close blender and re-open? Does it always do this when set to Chinese? Or is it only when changing language until it is restarted?

It used to be that temporary windows could steal each others' spaces. So you could have a render window open, then select Edit / Preferences and have Preferences take over the render window. That was changed to fix that but it does rely on the title of the window. So new request to open a temporary window (like render or preferences) will reuse an existing window only if the titles match.

Does this continue to happen if you change to Chinese and leave it that way? As in close blender and re-open? Does it always do this when set to Chinese? Or is it only when changing language until it is restarted? It used to be that temporary windows could steal each others' spaces. So you could have a render window open, then select Edit / Preferences and have Preferences take over the render window. That was changed to fix that but it does rely on the title of the window. So new request to open a temporary window (like render or preferences) will reuse an existing window only if the titles match.
Member

Does it always do this when set to Chinese? Or is it only when changing language until it is restarted?

Hi @Harley , what I did is: Set language to any (other than default) then hit F12 multiple times (Multiple instances of render window were created)

Even if I restart blender after changing the language, problem is reproducible.

(Same problem is not replicable for 2.92.0)

>Does it always do this when set to Chinese? Or is it only when changing language until it is restarted? Hi @Harley , what I did is: Set language to any (other than default) then hit F12 multiple times (Multiple instances of render window were created) Even if I restart blender after changing the language, problem is reproducible. (Same problem is not replicable for 2.92.0)

Added subscriber: @AaronSmithey

Added subscriber: @AaronSmithey

I have been having this issue as well. Multiple rendering windows opening up. Currently using Blender 2.93.1 I am not using Chinese interface. I am using English.

I have been having this issue as well. Multiple rendering windows opening up. Currently using Blender 2.93.1 I am not using Chinese interface. I am using English.
Harley Acheson self-assigned this 2021-07-01 20:36:55 +02:00

This issue was referenced by d6facd44b5

This issue was referenced by d6facd44b53108575381ca0637cd0fff73d45391

This issue was referenced by b39d66adde

This issue was referenced by b39d66adde52eb72bd93c2ecd75135fdfc9ca05b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @louwh

Added subscriber: @louwh
Member

Hi @Harley , is it safe to add your fix in blender-v2.93-release branch? Same issue reported recently (#90937) from 2.93 branch build

Hi @Harley , is it safe to add your fix in `blender-v2.93-release` branch? Same issue reported recently (#90937) from 2.93 branch build
Member

@PratikPB2123 - is it safe to add your fix in blender-v2.93-release branch? Same issue reported recently (#90937) from 2.93 branch build

Yes, but let me be pedantic for a moment as there are two similar but different issues.

This issue in this particular bug report only affects non-English Windows users. It is caused because our Windows-specific code to read the titles of the windows did not work correctly for non-English text. That was fixed with this: https://developer.blender.org/rBb39d66adde52eb72bd93c2ecd75135fdfc9ca05b and if this was only committed to the 3.0 branch then it could backported to 2.93. I only say "if" because I'm not exactly sure - I just committed to whatever was master at the time.

#90937 is indeed the same issue. It is Windows, Chinese, and 2.93 so I guess that does have to be backported.

But https://developer.blender.org/T88755 is a different issue. It affects all users but is only about saving and restoring a blend file that has an open Render window, which means you can get one extra. This is because all the windows that are restored during loading get the same "Blender" name.

> @PratikPB2123 - is it safe to add your fix in `blender-v2.93-release` branch? Same issue reported recently (#90937) from 2.93 branch build Yes, but let me be pedantic for a moment as there are two similar but different issues. This issue in *this* particular bug report only affects **non-English Windows** users. It is caused because our Windows-specific code to read the titles of the windows did not work correctly for non-English text. That was fixed with this: https://developer.blender.org/rBb39d66adde52eb72bd93c2ecd75135fdfc9ca05b and if this was only committed to the 3.0 branch then it could backported to 2.93. I only say "if" because I'm not exactly sure - I just committed to whatever was master at the time. #90937 is indeed the same issue. It is Windows, Chinese, and 2.93 so I guess that does have to be backported. But https://developer.blender.org/T88755 is a different issue. It affects all users but is only about saving and restoring a blend file that has an open Render window, which means you can get one extra. This is because all the windows that are restored during loading get the same "Blender" name.
Member

I talked to Jeroen and this is now on his list of possible backports to 2.93

I talked to Jeroen and this is now on his list of possible backports to 2.93
Member

I talked to Jeroen and this is now on his list of possible backports to 2.93

Hi, thanks :)

But https://developer.blender.org/T88755 is a different issue

Yes, it's a different issue.

> I talked to Jeroen and this is now on his list of possible backports to 2.93 Hi, thanks :) >But https://developer.blender.org/T88755 is a different issue Yes, it's a different issue.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88909
No description provided.